--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -9,6 +9,7 @@ imports:
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: pt_BR
+    imagem_directory: '%kernel.root_dir%/../web/uploads/imagens'
 
 framework:
     #esi:             ~
