--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -116,3 +116,18 @@ assetic:
                     output: fonts/fontawesome-webfont.woff
     filters:
         cssrewrite: ~
+
+monolog:
+    handlers:
+        # this "file_log" key could be anything
+        file_log:
+            type: stream
+            # log to var/logs/(environment).log
+            path: "%kernel.logs_dir%/%kernel.environment%.log"
+            # log *all* messages (debug is lowest level)
+            level: debug
+
+        syslog_handler:
+            type: syslog
+            # log error-level messages and higher
+            level: error
